Fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -98,23 +98,7 @@ rightpew {
     background: #928DAB;
     font-family: 'Montserrat', sans-serif;
 }
-/*#82FA58*/
-/*#header{
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    font-family: 'Montserrat', sans-serif;
-    letter-spacing: 0.2em;
-    text-transform: uppercase;
-    text-align: center;
-    width: 100%;
-    line-height: 100px;
-    font-size: 15px;
-    z-index: 1000;
-    /*background-color: #fafafa;
-}*/
 #code {
-/*  margin-top:150px;*/
   border-radius: 5px;
   width:550px;
   margin-left: 30px;
@@ -143,7 +127,6 @@ rightpew {
     margin-left: 0;
     text-align: center;
 }
-/*383737*/
 
 .laptop {
   width: 846px;
